course/jtb-calc/CalcParser.java
/* Generated By:JavaCC: Do not edit this line. CalcParser.java */
import syntaxtree.*;
import java.util.Vector;


public class CalcParser implements CalcParserConstants {

  static final public Goal Goal() throws ParseException {
   Exp n0;
   NodeToken n1;
   Token n2;
    n0 = Exp();
    n2 = jj_consume_token(0);
      n2.beginColumn++; n2.endColumn++;
      n1 = JTBToolkit.makeNodeToken(n2);
     {if (true) return new Goal(n0,n1);}
    throw new Error("Missing return statement in function");
  }

  static final public Exp Exp() throws ParseException {
   Term n0;
   NodeOptional n1 = new NodeOptional();
   Exp2 n2;
    n0 = Term();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PLUS:
    case MINUS:
      n2 = Exp2();
        n1.addNode(n2);
      break;
    default:
      jj_la1[0] = jj_gen;
      ;
    }
     {if (true) return new Exp(n0,n1);}
    throw new Error("Missing return statement in function");
  }

  static final public Exp2 Exp2() throws ParseException {
   NodeChoice n0;
   PlusExp n1;
   MinusExp n2;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PLUS:
      n1 = PlusExp();
        n0 = new NodeChoice(n1, 0);
      break;
    case MINUS:
      n2 = MinusExp();
        n0 = new NodeChoice(n2, 1);
      break;
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
     {if (true) return new Exp2(n0);}
    throw new Error("Missing return statement in function");
  }

  static final public PlusExp PlusExp() throws ParseException {
   NodeToken n0;
   Token n1;
   Term n2;
   NodeOptional n3 = new NodeOptional();
   Exp2 n4;
    n1 = jj_consume_token(PLUS);
            n0 = JTBToolkit.makeNodeToken(n1);
    n2 = Term();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PLUS:
    case MINUS:
      n4 = Exp2();
        n3.addNode(n4);
      break;
    default:
      jj_la1[2] = jj_gen;
      ;
    }
     {if (true) return new PlusExp(n0,n2,n3);}
    throw new Error("Missing return statement in function");
  }

  static final public MinusExp MinusExp() throws ParseException {
   NodeToken n0;
   Token n1;
   Term n2;
   NodeOptional n3 = new NodeOptional();
   Exp2 n4;
    n1 = jj_consume_token(MINUS);
            n0 = JTBToolkit.makeNodeToken(n1);
    n2 = Term();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PLUS:
    case MINUS:
      n4 = Exp2();
        n3.addNode(n4);
      break;
    default:
      jj_la1[3] = jj_gen;
      ;
    }
     {if (true) return new MinusExp(n0,n2,n3);}
    throw new Error("Missing return statement in function");
  }

  static final public Term Term() throws ParseException {
   Factor n0;
   NodeOptional n1 = new NodeOptional();
   Term2 n2;
    n0 = Factor();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case MULT:
    case DIV:
      n2 = Term2();
        n1.addNode(n2);
      break;
    default:
      jj_la1[4] = jj_gen;
      ;
    }
     {if (true) return new Term(n0,n1);}
    throw new Error("Missing return statement in function");
  }

  static final public Term2 Term2() throws ParseException {
   NodeChoice n0;
   TimesExp n1;
   DivExp n2;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case MULT:
      n1 = TimesExp();
        n0 = new NodeChoice(n1, 0);
      break;
    case DIV:
      n2 = DivExp();
        n0 = new NodeChoice(n2, 1);
      break;
    default:
      jj_la1[5] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
     {if (true) return new Term2(n0);}
    throw new Error("Missing return statement in function");
  }

  static final public TimesExp TimesExp() throws ParseException {
   NodeToken n0;
   Token n1;
   Factor n2;
   NodeOptional n3 = new NodeOptional();
   Term2 n4;
    n1 = jj_consume_token(MULT);
            n0 = JTBToolkit.makeNodeToken(n1);
    n2 = Factor();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case MULT:
    case DIV:
      n4 = Term2();
        n3.addNode(n4);
      break;
    default:
      jj_la1[6] = jj_gen;
      ;
    }
     {if (true) return new TimesExp(n0,n2,n3);}
    throw new Error("Missing return statement in function");
  }

  static final public DivExp DivExp() throws ParseException {
   NodeToken n0;
   Token n1;
   Factor n2;
   NodeOptional n3 = new NodeOptional();
   Term2 n4;
    n1 = jj_consume_token(DIV);
            n0 = JTBToolkit.makeNodeToken(n1);
    n2 = Factor();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case MULT:
    case DIV:
      n4 = Term2();
        n3.addNode(n4);
      break;
    default:
      jj_la1[7] = jj_gen;
      ;
    }
     {if (true) return new DivExp(n0,n2,n3);}
    throw new Error("Missing return statement in function");
  }

  static final public Factor Factor() throws ParseException {
   NodeChoice n0;
   Num n1;
   ParExp n2;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NUMBER:
      n1 = Num();
        n0 = new NodeChoice(n1, 0);
      break;
    case LPAR:
      n2 = ParExp();
        n0 = new NodeChoice(n2, 1);
      break;
    default:
      jj_la1[8] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
     {if (true) return new Factor(n0);}
    throw new Error("Missing return statement in function");
  }

  static final public Num Num() throws ParseException {
   NodeToken n0;
   Token n1;
    n1 = jj_consume_token(NUMBER);
                 n0 = JTBToolkit.makeNodeToken(n1);
     {if (true) return new Num(n0);}
    throw new Error("Missing return statement in function");
  }

  static final public ParExp ParExp() throws ParseException {
   NodeToken n0;
   Token n1;
   Exp n2;
   NodeToken n3;
   Token n4;
    n1 = jj_consume_token(LPAR);
            n0 = JTBToolkit.makeNodeToken(n1);
    n2 = Exp();
    n4 = jj_consume_token(RPAR);
            n3 = JTBToolkit.makeNodeToken(n4);
     {if (true) return new ParExp(n0,n2,n3);}
    throw new Error("Missing return statement in function");
  }

  static private boolean jj_initialized_once = false;
  /** Generated Token Manager. */
  static public CalcParserTokenManager token_source;
  static JavaCharStream jj_input_stream;
  /** Current token. */
  static public Token token;
  /** Next token. */
  static public Token jj_nt;
  static private int jj_ntk;
  static private int jj_gen;
  static final private int[] jj_la1 = new int[9];
  static private int[] jj_la1_0;
  static {
      jj_la1_init_0();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0x300,0x300,0x300,0x300,0xc00,0xc00,0xc00,0xc00,0x1040,};
   }

  /** Constructor with InputStream. */
  public CalcParser(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public CalcParser(java.io.InputStream stream, String encoding) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser.  ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    try { jj_input_stream = new JavaCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new CalcParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 9; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 9; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public CalcParser(java.io.Reader stream) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    jj_input_stream = new JavaCharStream(stream, 1, 1);
    token_source = new CalcParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 9; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 9; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public CalcParser(CalcParserTokenManager tm) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 9; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(CalcParserTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 9; i++) jj_la1[i] = -1;
  }

  static private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }


/** Get the next Token. */
  static final public Token getNextToken() {
    if (token.next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    jj_gen++;
    return token;
  }

/** Get the specific Token. */
  static final public Token getToken(int index) {
    Token t = token;
    for (int i = 0; i < index; i++) {
      if (t.next != null) t = t.next;
      else t = t.next = token_source.getNextToken();
    }
    return t;
  }

  static private int jj_ntk() {
    if ((jj_nt=token.next) == null)
      return (jj_ntk = (token.next=token_source.getNextToken()).kind);
    else
      return (jj_ntk = jj_nt.kind);
  }

  static private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
  static private int[] jj_expentry;
  static private int jj_kind = -1;

  /** Generate ParseException. */
  static public ParseException generateParseException() {
    jj_expentries.clear();
    boolean[] la1tokens = new boolean[13];
    if (jj_kind >= 0) {
      la1tokens[jj_kind] = true;
      jj_kind = -1;
    }
    for (int i = 0; i < 9; i++) {
      if (jj_la1[i] == jj_gen) {
        for (int j = 0; j < 32; j++) {
          if ((jj_la1_0[i] & (1<<j)) != 0) {
            la1tokens[j] = true;
          }
        }
      }
    }
    for (int i = 0; i < 13; i++) {
      if (la1tokens[i]) {
        jj_expentry = new int[1];
        jj_expentry[0] = i;
        jj_expentries.add(jj_expentry);
      }
    }
    int[][] exptokseq = new int[jj_expentries.size()][];
    for (int i = 0; i < jj_expentries.size(); i++) {
      exptokseq[i] = jj_expentries.get(i);
    }
    return new ParseException(token, exptokseq, tokenImage);
  }

  /** Enable tracing. */
  static final public void enable_tracing() {
  }

  /** Disable tracing. */
  static final public void disable_tracing() {
  }

}

class JTBToolkit {
   static NodeToken makeNodeToken(Token t) {
      return new NodeToken(t.image.intern(), t.kind, t.beginLine, t.beginColumn, t.endLine, t.endColumn);
   }
}
